@@ -98,9 +98,7 @@ public class EncryptionStressTest implements IDeviceTest, IRemoteTest {
     public void run(ITestInvocationListener listener) throws DeviceNotAvailableException {
         Assert.assertNotNull(mTestDevice);
 
-        String key = String.format("EncryptionStressTest", mTestDevice.getSerialNumber());
-
-        listener.testRunStarted(key, 0);
+        listener.testRunStarted("EncryptionStressTest", 0);
 
         for (int i = 0; i < mIterations; i++) {
             CLog.i("Starting encryption stress iteration %d of %d on device %s", i + 1, mIterations,
@@ -109,8 +107,9 @@ public class EncryptionStressTest implements IDeviceTest, IRemoteTest {
         }
 
         Map<String, String> metrics = new HashMap<String, String>(2);
-        metrics.put(mTestDevice.getSerialNumber() + "_iterations",
-                new Integer(mEncryptionStats.size()).toString());
+        metrics.put(
+                mTestDevice.getSerialNumber() + "_iterations",
+                Integer.valueOf(mEncryptionStats.size()).toString());
         metrics.put(mTestDevice.getSerialNumber() + "_mean", mEncryptionStats.mean().toString());
 
         listener.testRunEnded(0, metrics);
